@@ -1,3 +1,4 @@
+1/23/14 revert: Custom: don't collapse meter when collapse button is pressed, just hide pH picker
 1/23/14 Custom: remove dropper and drain, use a fixed volume of solution
 1/23/14 Custom: don't collapse meter when collapse button is pressed, just hide pH picker
 1/23/14 fix: initial graph layout got hosed by non-zero initial volume
